--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="description" content="Sudoku solver app" />
+		<meta name="keywords" content="Sudoku, JavaScript, REACT" />
+		<meta name="author" content="Nick Khapatniukovskyi" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<title>Sudoku Solver App</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
+		<main id="root"></main>
 	</body>
 </html>
